--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
-  "name": "coffee-backend",
+  "name": "celo-coffee",
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "node-fetch": "^3.3.2"
-  },
-  "scripts": {
-    "start": "node index.js"
+    "web3": "^4.3.0"
   }
 }
